--- a/index.html
+++ b/index.html
@@ -2,11 +2,44 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
+
 </head>
 
 <body>
 
 <!-- Header -->
+
+<header>
+  <nav class="container">
+    <div class="logo">
+      <img src="resources/media/images/ic-logo.svg">
+      <h3>COLMAR<span class="special-color">ACADEMY</span></h3>
+    </div>
+
+    <div class="menu">
+      <ul>
+        <li>On campus</li>
+        <li>Online</li>
+        <li>For companies</li>
+        <li>Sign in</li>
+      </ul>
+    </div>
+  </nav>
+
+<!-- Banner -->
+
+    <div class="flex-container">
+      <div class="main-banner">
+        <img src="resources/media/images/banner.jpg">
+        <h1>Learn something new everyday</h1>
+        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<h3>
+          <p class="button">Start here</p>
+      </div>
+    </div>
+</header>
+
+
 
 
 
