--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <nav class="container">
     <div class="logo">
       <img src="resources/media/images/ic-logo.svg">
-      <h3>COLMAR<span class="special-color">ACADEMY</span></h3>
+      <h4>COLMAR<span class="special-color">ACADEMY</span></h4>
     </div>
 
     <div class="menu">
@@ -29,14 +29,17 @@
 
 <!-- Banner -->
 
-    <div class="flex-container">
-      <div class="main-banner">
-        <img src="resources/media/images/banner.jpg">
-        <h1>Learn something new everyday</h1>
-        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<h3>
-          <p class="button">Start here</p>
+    <div class="main-banner">
+      <img src="resources/media/images/banner.jpg">
+      <div class="title">
+        <h1>Learn something
+          <br>new everyday</h1>
+        <p>Lorem ipsum dolor sit amet,
+          <br>consectetur adipiscing elit.<p>
+        <p class="button">Start here</p>
       </div>
     </div>
+  </div>
 </header>
 
 
