Information Section HTML Complete

--- a/index.html
+++ b/index.html
@@ -42,6 +42,37 @@
   </div>
 </header>
 
+<!-- Information Section -->
+
+<div class="info-container">
+  <div class="info-left">
+    <img src="resources/media/images/information-main.jpg">
+    <h1>It doesn't hurt to keep practicing</h1>
+    <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+    <p>Emanuel, Sr Strategist at Hiring.com</p>
+  </div>
+
+  <div class="info-right">
+    <span class="info-bite">
+      <img src="resources/media/images/information-orientation.jpg">
+      <h2>Orientation date</h2>
+      <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+      <p class="link">Read more</p>
+    </span>
+    <span class="info-bite">
+      <img src="resources/media/images/information-campus.jpg">
+      <h2>Our campus</h2>
+      <p>Find which campus is close by you</p>
+      <p class="link">Read more</p>
+    </span>
+    <span class="info-bite">
+      <img src="resources/media/images/information-guest-lecture.jpg">
+      <h2>Our guest lecture</h2>
+      <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+      <p class="link">Read more</p>
+    </span>
+  </div>
+</div>
 
 
 
